# RetinaFace_TensorRT8

./: CMakeLists.txt  README.md
retinaface/: RetinaFace.cpp  RetinaFace.h  timer.h
retinaface/tensorrt/: trtnetbase.cpp  trtnetbase.h  trtretinafacenet.cpp  trtretinafacenet.h  trtutility.h
unitest/: CMakeLists.txt  test_plugins.cpp
unitest/retinaface/: test_retinaface.cpp
